# sprintf-rs

./: CHANGELOG.md  COPYING  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
src/: format.rs  lib.rs  parser.rs
tests/: compare_to_libc.rs  format.rs
