[package]
name = "lformat"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Jollans <tjol@tjol.eu>", "lyranowl <nikita.malina23@gmail.com>"]
license = "MIT"
description = "Clone of Lua `string.format` in Rust based on C `s(n)printf`"
repository = "https://github.com/reloginn/lformat"
keywords = ["lua", "format", "text", "string"]

[dependencies]
thiserror = "2.0"
fhex = "1.0"
