[package]
name = "sprintf"
version = "0.4.3"
edition = "2018"
authors = ["Thomas Jollans <tjol@tjol.eu>"]
license = "MIT"
description = "Clone of C s(n)printf in Rust"
repository = "https://github.com/tjol/sprintf-rs"
keywords = ["printf", "text", "string"]
categories = ["template-engine", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"

[dev-dependencies]
libc = "0.2"
